// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admission Status [GET] /courses/{courseId}/admission-status 1`] = `
Array [
  Object {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": Object {
      "displayName": "Max Mustermann",
      "email": "max.mustermann@test.com",
      "matrNr": 123456,
      "role": "STUDENT",
      "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
      "username": "mmustermann",
    },
    "results": Array [
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 75,
        "achievedPoints": 75,
        "passed": true,
      },
      Object {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 25,
        "achievedPoints": 25,
        "passed": false,
      },
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": true,
      },
    ],
  },
  Object {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": Object {
      "displayName": "Hans Peter",
      "email": "hans.peter@test.com",
      "matrNr": 111111,
      "role": "STUDENT",
      "userId": "40f59aad-7473-4455-a3ea-1214f19b2565",
      "username": "hpeter",
    },
    "results": Array [
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 75,
        "achievedPoints": 75,
        "passed": true,
      },
      Object {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": true,
      },
    ],
  },
  Object {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": Object {
      "displayName": "elshar",
      "email": "elshar@test.com",
      "matrNr": 777777,
      "role": "STUDENT",
      "userId": "3e52e822-4ebc-49c3-94e2-06ba447b5d1f",
      "username": "elshar",
    },
    "results": Array [
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      Object {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 50,
        "achievedPoints": 1,
        "passed": true,
      },
    ],
  },
  Object {
    "fulfillsAdmissionCriteria": false,
    "hasAdmission": false,
    "hasAdmissionFromPreviousSemester": false,
    "participant": Object {
      "displayName": "kunold",
      "email": "kunold@test.com",
      "matrNr": 888888,
      "role": "STUDENT",
      "userId": "24b4ec8c-dd8a-4bd6-843c-2c412fb1d5b7",
      "username": "kunold",
    },
    "results": Array [
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      Object {
        "_assignmentType": "TESTAT",
        "_rule": "REQUIRED_PERCENT_OVERALL",
        "achievedPercent": 0,
        "achievedPoints": 0,
        "passed": false,
      },
      Object {
        "_assignmentType": "HOMEWORK",
        "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
        "achievedPercent": 50,
        "achievedPoints": 1,
        "passed": true,
      },
    ],
  },
]
`;

exports[`Admission Status [GET] /courses/{courseId}/admission-status/{userId} 1`] = `
Object {
  "fulfillsAdmissionCriteria": false,
  "hasAdmission": false,
  "hasAdmissionFromPreviousSemester": false,
  "participant": Object {
    "displayName": "Max Mustermann",
    "email": "max.mustermann@test.com",
    "matrNr": 123456,
    "role": "STUDENT",
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
    "username": "mmustermann",
  },
  "results": Array [
    Object {
      "_assignmentType": "HOMEWORK",
      "_rule": "REQUIRED_PERCENT_OVERALL",
      "achievedPercent": 75,
      "achievedPoints": 75,
      "passed": true,
    },
    Object {
      "_assignmentType": "TESTAT",
      "_rule": "REQUIRED_PERCENT_OVERALL",
      "achievedPercent": 25,
      "achievedPoints": 25,
      "passed": false,
    },
    Object {
      "_assignmentType": "HOMEWORK",
      "_rule": "INDIVIDUAL_PERCENT_WITH_ALLOWED_FAILURES",
      "achievedPercent": 0,
      "achievedPoints": 0,
      "passed": true,
    },
  ],
}
`;

exports[`Admission Status [GET] /courses/{courseId}/admission-status/overview 1`] = `
Object {
  "assignments": Array [
    Object {
      "collaboration": "GROUP_OR_SINGLE",
      "endDate": "2020-05-10T22:00:00.000Z",
      "id": "c2bc4aa4-6207-11ea-bc55-0242ac130003",
      "name": "Test_Assignment 04 (Java)",
      "points": 100,
      "startDate": "2020-05-03T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "HOMEWORK",
    },
    Object {
      "collaboration": "SINGLE",
      "endDate": "2020-04-26T22:00:00.000Z",
      "id": "75b799a1-a406-419b-a448-909aa3d34afa",
      "name": "Test_Assignment 07 (Java) Testat Evaluated",
      "points": 100,
      "startDate": "2020-04-19T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "TESTAT",
    },
  ],
  "results": Array [
    Object {
      "achievedPoints": Array [
        75,
        25,
      ],
      "assessmentIds": Array [
        "8f60f844-4129-48a4-a625-7a74c7defd0d",
        "932c7bd8-2338-4e60-955a-39da5f858212",
      ],
      "student": Object {
        "displayName": "Max Mustermann",
        "email": "max.mustermann@test.com",
        "matrNr": 123456,
        "role": "STUDENT",
        "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
        "username": "mmustermann",
      },
    },
    Object {
      "achievedPoints": Array [
        75,
        null,
      ],
      "assessmentIds": Array [
        "8f60f844-4129-48a4-a625-7a74c7defd0d",
        null,
      ],
      "student": Object {
        "displayName": "Hans Peter",
        "email": "hans.peter@test.com",
        "matrNr": 111111,
        "role": "STUDENT",
        "userId": "40f59aad-7473-4455-a3ea-1214f19b2565",
        "username": "hpeter",
      },
    },
    Object {
      "achievedPoints": Array [
        null,
        null,
      ],
      "assessmentIds": Array [
        null,
        null,
      ],
      "student": Object {
        "displayName": "elshar",
        "email": "elshar@test.com",
        "matrNr": 777777,
        "role": "STUDENT",
        "userId": "3e52e822-4ebc-49c3-94e2-06ba447b5d1f",
        "username": "elshar",
      },
    },
    Object {
      "achievedPoints": Array [
        null,
        null,
      ],
      "assessmentIds": Array [
        null,
        null,
      ],
      "student": Object {
        "displayName": "kunold",
        "email": "kunold@test.com",
        "matrNr": 888888,
        "role": "STUDENT",
        "userId": "24b4ec8c-dd8a-4bd6-843c-2c412fb1d5b7",
        "username": "kunold",
      },
    },
  ],
}
`;

exports[`Admission Status [GET] /courses/{courseId}/admission-status/overview/{userId} 1`] = `
Object {
  "assignments": Array [
    Object {
      "collaboration": "GROUP_OR_SINGLE",
      "endDate": "2020-05-10T22:00:00.000Z",
      "id": "c2bc4aa4-6207-11ea-bc55-0242ac130003",
      "name": "Test_Assignment 04 (Java)",
      "points": 100,
      "startDate": "2020-05-03T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "HOMEWORK",
    },
    Object {
      "collaboration": "SINGLE",
      "endDate": "2020-04-26T22:00:00.000Z",
      "id": "75b799a1-a406-419b-a448-909aa3d34afa",
      "name": "Test_Assignment 07 (Java) Testat Evaluated",
      "points": 100,
      "startDate": "2020-04-19T22:00:00.000Z",
      "state": "EVALUATED",
      "type": "TESTAT",
    },
  ],
  "results": Array [
    Object {
      "achievedPoints": Array [
        75,
        25,
      ],
      "assessmentIds": Array [
        "8f60f844-4129-48a4-a625-7a74c7defd0d",
        "932c7bd8-2338-4e60-955a-39da5f858212",
      ],
      "student": Object {
        "displayName": "Max Mustermann",
        "email": "max.mustermann@test.com",
        "matrNr": 123456,
        "role": "STUDENT",
        "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
        "username": "mmustermann",
      },
    },
  ],
}
`;
